# xdev-core

./: .clang-format  .gitignore  .gitmodules  .melt_options  CMakeLists.txt  README.md  compile_flags.txt  conanfile.py  project.py
.circleci/: config.yml
.conan/profiles/: gcc  gcc-9
.github/workflows/: build-check-linux.yml  build-check-windows.yml  build-check.yml  ccpp.yml  conan-packages.yml  pull-request.yml
cmake/: conan_check.cmake  xdev.cmake
docker/: CMakeLists.txt  Dockerfile  docker-compose.yml
exe/: CMakeLists.txt
exe/basic-rc/: CMakeLists.txt
exe/basic-rc/include/xdev/: basic-rc.hpp  xdev-basic-rc.hpp
exe/basic-rc/src/: basic-rc.cpp  main.cpp  xdev-basic-rc.cpp
exe/basic-rc/tests/: CMakeLists.txt
exe/basic-rc/tests/json/: CMakeLists.txt  json-load-test.cpp  test-json-compile.cpp  test-json-load.cpp
exe/basic-rc/tests/json/resources/: test.json
exe/moc/: CMakeLists.txt
exe/moc/include/xdev/: moc.hpp  xdev-moc.hpp
exe/moc/resources/templates/: header.xtf  moc.cpp.xtf  moc.h.xtf  pools.cpp.xtf  pools.h.xtf  xapplication.cpp.xtf  xapplication.h.xtf  xclass.cpp.xtf  xclass.h.xtf
exe/moc/src/: main.cpp  moc.cpp  xdev-moc.cpp
exe/moc/tests/: CMakeLists.txt
exe/moc/tests/basic/: CMakeLists.txt  bench-compile.cpp  test-basic.cpp  test-compile.cpp  test_object.h
exe/moc/tests/object-properties/: CMakeLists.txt  test-basic.cpp  test-compile.cpp  test_object.h
extra/: CMakeLists.txt
extra/pyxdev/: CMakeLists.txt
extra/pyxdev/src/: xdev-pyxdev.cpp
extra/pyxdev/tests/: CMakeLists.txt  test-lib.cpp  test-lib.hpp  test_lib.py
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt  conanfile.py  xproj.py
libs/core/include/: xdev.hpp
libs/core/include/xdev/: app.hpp  base64.hpp  concepts.hpp  exception.hpp  gsl.hpp  json.hpp  library.hpp  object-pool.hpp  object.hpp  properties.hpp  resources.hpp  rng.hpp  std-concepts.hpp  str-tools.hpp  tools.hpp  tuple-tools.hpp  typetraits.hpp  variant-dict.hpp  variant-fmt.hpp  variant-list.hpp  variant-value.hpp  variant.hpp  xclass.hpp  xdev-app.hpp  xdev-base64.hpp  xdev-concepts.hpp  xdev-concurrent.hpp  xdev-core.hpp  xdev-exception.hpp  xdev-json.hpp  xdev-library.hpp  xdev-logger.hpp  xdev-object-pool.hpp  xdev-object.hpp  xdev-properties.hpp  xdev-resources.hpp  xdev-tools.hpp  xdev-tuple-slice.hpp  xdev-tuple-tools.hpp  xdev-typetraits.hpp  (+12 more)
libs/core/inline/xdev/: json.inl  object.inl  variant-dict.inl  variant-function.inl  variant-list.inl  variant-value.inl  variant.inl  xdev-json.inl  xdev-object.inl  xdev-variant-array.inl  xdev-variant-dict.inl  xdev-variant-function.inl  xdev-variant-list.inl  xdev-variant-value.inl  xdev-variant.inl  xdev-yaml.inl  yaml.inl
libs/core/libstdc++-extra/format/: format
libs/core/src/: app.cpp  base64.cpp  exception.cpp  library.cpp  object.cpp  variant.cpp  xclass.cpp  xdev-app.cpp  xdev-base64.cpp  xdev-exception.cpp  xdev-library.cpp  xdev-object.cpp  xdev-properties.cpp  xdev-variant.cpp  xdev-xclass.cpp
libs/core/tests/: CMakeLists.txt  test-concurrent.cpp  test-events.cpp  test-hexlify.cpp  test-logger.cpp  test-properties.cpp  test-rng.cpp  test-tuple-tools.cpp
libs/core/tests/api/: CMakeLists.txt  test-xvariant-api-v1.0.cpp
libs/core/tests/object/: CMakeLists.txt  dumb-test.cpp  test-object.cpp  testobject.cpp  testobject.h
libs/core/tests/variant/: CMakeLists.txt  test-function.cpp  test-json.cpp  test-variant-dict.cpp  test-variant-function.cpp  test-variant-list.cpp  test-variant-value.cpp  test-variant.cpp  test-yaml-spec.cpp  test-yaml.cpp
libs/ctt/: CMakeLists.txt
libs/ctt/include/xdev/: ct.hpp  ctt.hpp
libs/ctt/include/xdev/ct/: string.hpp  tuple.hpp
libs/ctt/include/xdev/ctt/: blocks.hpp  concepts.hpp  evaluator.hpp  parser.hpp  tokenizer.hpp
libs/ctt/tests/: CMakeLists.txt  test-basic.cpp  test-constexpr-string.cpp  test-evaluators.cpp  test-string.cpp  test-tuple.cpp
libs/template/: CMakeLists.txt
libs/template/include/xdev/: template-blocks.hpp  template-expressions.hpp  template.hpp  xdev-template-blocks.hpp  xdev-template-expressions.hpp  xdev-template.hpp
libs/template/src/: template-blocks.cpp  template-expressions.cpp  xdev-template-blocks.cpp  xdev-template-expressions.cpp
libs/template/tests/: CMakeLists.txt  test-expressions.cpp  test-template.cpp
test_package/: CMakeLists.txt  conanfile.py  main.cpp  test-object.hpp
